<?xml version="1.0"?>
<package>
  <name>softkinetic</name>
  <version>0.0.0</version>
  <description>The softkinetic package</description>

  <maintainer email="fmw@ipa-fhg.de">florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="flg@ipa.fhg.de">Felipe Garcia Lopez</author>

  <license>LGPL</license>
  <url type="website">http://wiki.ros.org/softkinetic</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>softkinetic_camera</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
